--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,25 @@
 @import "tailwindcss";
+
+@theme {
+    
+    --color-stone-100: hsl(30, 54%, 90%);
+    --color-stone-150: hsl(30, 18%, 87%);
+    --color-stone-600: hsl(30, 10%, 34%);
+    --color-stone-900: hsl(24, 5%, 18%);
+
+    --color-brown-800: hsl(14, 45%, 36%);
+
+    --color-rose-800: hsl(332, 51%, 32%);
+    --color-rose-50: hsl(330, 100%, 98%);
+}
+
+@layer base {
+    hr {
+        color: hsl(30, 18%, 87%);
+    }
+
+
+}
+
+
+
